[gd_scene load_steps=11 format=2]

[ext_resource path="res://media/hudImg/image.png" type="Texture" id=1]
[ext_resource path="res://media/hudImg/discordlogo.png" type="Texture" id=2]
[ext_resource path="res://media/png/image.png" type="Texture" id=3]
[ext_resource path="res://media/fonts/Pixeled.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menu.gd" type="Script" id=5]
[ext_resource path="res://Options_Menu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 46
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 597, 246 )
expand_margin_left = 135.0
expand_margin_right = 121.0
expand_margin_top = 64.0
expand_margin_bottom = 74.0

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 597, 246 )
expand_margin_top = 44.0
expand_margin_bottom = 49.0

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="WebButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -57.0
margin_right = -24.0
margin_bottom = -20.0

[node name="LogoSprite" type="Sprite" parent="WebButton"]
position = Vector2( 11, 13 )
scale = Vector2( 0.106089, 0.118774 )
texture = ExtResource( 1 )

[node name="DiscordButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = -44.0
margin_right = 48.0
margin_bottom = -15.0

[node name="LogoSprite" type="Sprite" parent="DiscordButton"]
position = Vector2( 17.1186, 13.5546 )
scale = Vector2( 0.091506, 0.0968624 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.5
margin_top = -107.0
margin_right = 235.5
margin_bottom = 107.0
custom_constants/separation = 115

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
margin_right = 471.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "START GAME"

[node name="ConfigButton" type="Button" parent="VBoxContainer"]
margin_top = 245.0
margin_right = 471.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "OPTIONS"

[node name="Options_Menu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="WebButton" to="." method="_on_WebButton_pressed"]
[connection signal="pressed" from="DiscordButton" to="." method="_on_DiscordButton_pressed"]
